<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kapitola10</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_world_a2">Hello world activity 2!</string>
    <string name="hello_world_a3">Hello world activity 3!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity1">Linear rozlozenie</string>
    <string name="title_activity_activity2">Linear percenta</string>
    <string name="title_activity_activity3">Relative</string>
    <string name="title_activity_activity4">Relative prekryvanie</string>
    <string name="title_activity_activity5">Table layout</string>
    <string name="title_activity_activity6">ScrollView</string>
    <string name="title_activity_activity7">GridLayout(CSS)</string>
    <string name="left1">left</string>
    <string name="center1">center</string>
    <string name="right1">right</string>

</resources>
